[package]
name = "willow-transport-encryption"
version = "0.1.0"
edition = "2021"
description = "The recommended transport encryption for use with the WGPS of Willow."
license = "MIT OR Apache-2.0"

[dependencies]
ufotofu = { version = "0.7.0", features = ["std"] }
ufotofu_codec = "0.1.3"
either = "1.10.0"

[dev-dependencies]
smol = "2.0.2"
wb_async_utils = { version = "0.2.0", features = ["ufotofu_utils"] }
ufotofu_queues = "0.6.0"
futures = "0.3.31"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true

[lints]
workspace = true
