[package]
name = "ufotofu_codec"
version = "0.1.0"
edition = "2021"

[features]

default = ["std"]

# Provide functionality that relies on the std library. Enabled by default.
std = ["alloc"]
# Provide functionality that relies on dynamic memory allocation.
alloc = []
# Provide test helpers.
dev = ["std"]

[dependencies]
ufotofu = { version = "0.6.0", features = ["dev"]}
either = "1.10.0"
pollster = "0.4.0"
wb_async_utils = { path = "../wb_async_utils", version = "0.1.0" }

[lints]
workspace = true

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
