[package]
name = "wgps"
version = "0.1.0"
edition = "2021"

[dependencies]
wb_async_utils = { version = "0.1.0" }
willow-data-model = { path = "../data-model", version = "0.1.0" }
ufotofu_codec = { version = "0.1.0" }
ufotofu = { version = "0.6.0", features = ["std"] }
lcmux = { path = "../lcmux", version = "0.1.0" }
ufotofu_queues = { version = "0.6.0", features = ["std"] }
futures = { version = "0.3.31" }
either = "1.10.0"
async_cell = "0.2.2"

[dev-dependencies]
smol = "2.0.0"

[lints]
workspace = true
