[package]
name = "wgps"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = ["dep:arbitrary"]

[dependencies]
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
wb_async_utils = { version = "0.1.3" }
willow-data-model = { path = "../data-model", version = "0.2.0" }
ufotofu_codec = { version = "0.1.1" }
ufotofu = { version = "0.6.0", features = ["std"] }
lcmux = { path = "../lcmux", version = "0.1.0" }
ufotofu_queues = { version = "0.6.0", features = ["std"] }
futures = { version = "0.3.31" }
either = "1.10.0"
async_cell = "0.2.2"
willow-transport-encryption = { path = "../transport_encryption" }
multimap = "0.10.1"
willow-encoding = { path = "../encoding", version = "0.1.0" }

[dev-dependencies]
smol = "2.0.0"
willow_25 = { path = "../willow_25" }

[lints]
workspace = true
