[package]
name = "wgps"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = ["dep:arbitrary"]

[dependencies]
ufotofu = { version = "0.7.0", features = ["std"] }
ufotofu_codec = { version = "0.1.3" }
wb_async_utils = { version = "0.2.0" }
ufotofu_queues = { version = "0.6.0", features = ["std"] }
willow-data-model = { path = "../data-model", version = "0.2.0" }
lcmux = { path = "../lcmux", version = "0.1.0" }
futures = { version = "0.3.31" }
arbitrary = { version = "1.0.2", features = ["derive"], optional = true }
either = "1.10.0"
async_cell = "0.2.2"
willow-transport-encryption = { path = "../transport_encryption" }
multimap = "0.10.1"
willow-encoding = { path = "../encoding", version = "0.1.0" }
compact_u64 = { version = "0.1.0", features = ["std", "dev"] }
willow-pio = { version = "0.1.0", path = "../pio" }

[dev-dependencies]
smol = "2.0.0"
willow_25 = { path = "../willow_25" }

[lints]
workspace = true
