[package]
name = "willow_test_vectors"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = "1.4.1"
willow_25 = { path = "../willow_25", features = ["dev"] }
willow-data-model = { path = "../data-model", version = "0.2.0", features = [
    "dev",
] }
ufotofu_codec = { version = "0.1.0", features = ["std", "dev"] }
pollster = "0.4.0"
ufotofu = "0.6.5"

[patch.crates-io]
ufotofu_codec = { path = "../../ufotofu/ufotofu_codec", features = [
    "std",
    "dev",
] }
ufotofu = { path = "../../ufotofu/ufotofu", features = ["std", "dev"] }

[lints]
workspace = true
