[package]
name = "willow_test_vectors"
version = "0.1.0"
edition = "2021"

[dependencies]
ufotofu = "0.7.1"
ufotofu_codec = { version = "0.1.3", features = ["std", "dev"] }
arbitrary = "1.4.1"
willow_25 = { path = "../willow_25", features = ["dev"] }
willow-data-model = { path = "../data-model", version = "0.2.0", features = [
    "dev",
] }
meadowcap = { path = "../meadowcap", features = ["dev"] }
pollster = "0.4.0"

[lints]
workspace = true
